# adk-samples

./: .gitignore  note.md  pyproject.toml
agents/RAG/: README.md
my_gemini_agent/: .env  README.md  package.json  pyproject.toml  run_web_server.py
my_gemini_agent/agents/gemini_agent/: __init__.py
my_gemini_agent/docs/: DOCUMENTATION.md
my_gemini_agent/src/: __init__.py  __main__.py  agent.py  config.py  prompt.py  tools.py
